--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -1,28 +1,28 @@
 <html lang="en">
 <head>
   <meta charset="utf-8"/>
-  <title>DomoMaker</title>
+  <title>Avail</title>
   <script crossorigin src="https://unpkg.com/react@17/umd/react.development.js"></script>
   <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <link rel="shortcut icon" href="/assets/img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
 </head>
 <body>
-  <nav><a href="/login"><img id="logo" src="/assets/img/face.png" alt="face logo"/></a>
+  <nav><a href="/login"><img id="logo" src="/assets/img/icon.png" alt="calendar logo"/></a>
     <div class="navlink"><a href="/logout">Log out</a></div>
   </nav>
 
-  <section id="makeDomo">
+  <section id="makeBlockset">
 
   </section>
-  <section id="domos">
+  <section id="blocksets">
     
   </section>
 
-  <div id="domoMessage" class='hidden'>
+  <div id="blocksetMessage" class='hidden'>
     <img id="speech" src="/assets/img/speech.png" alt="speech box"/>
     <h3><span id="errorMessage"></span></h3>
-    <img id="domo" src="assets/img/domo.png" alt="domo"/>
+    <img id="blockset" src="assets/img/domo.png" alt="domo"/>
   </div>
   <script src="/assets/appBundle.js"></script>
 </body>
