--- a/views/app.handlebars
+++ b/views/app.handlebars
@@ -12,10 +12,19 @@
     <div class="navlink"><a href="/logout">Log out</a></div>
   </nav>
 
+  <section id="addBlockset">
+    <button type="button" id="addBlocksetButton">New Blockset</button>
+  </section>
+
   <section id="makeBlockset">
 
   </section>
+
   <section id="blocksets">
+    
+  </section>
+
+  <section id="container">
     
   </section>
 
