--- a/hosted/style.css
+++ b/hosted/style.css
@@ -5,18 +5,15 @@ html, body {
     padding: 0;
     overflow-x: hidden;
 }
-
 #logo {
-    height: 40px;
-    width: 40;
+    height: 60px;
+    /*width: 40px;*/
     padding-top: 5px;
     float:left;
-    border-radius: 8px;
 }
-
 nav {
     width: 100%;
-    height: 50px;
+    height: 70px;
     background-color: #55acee;
 }
 
@@ -92,7 +89,8 @@ nav:nth-child(1) {
 
 .mainForm {
     height: 300px;
-    width: 350px;
+    width: 80%;
+    min-width: 440px;
     margin: 0 auto;
     padding-top: 350px;
     font-size: 1.2em;
@@ -104,7 +102,7 @@ nav:nth-child(1) {
 
 .mainForm label {
     display: inline-block;
-    width: 100px;
+    width: 120px;
     margin-right: 10px;
     text-align: right;
     font-size: 1.2em;
