--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -6,11 +6,23 @@
   <script crossorigin src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
   <link rel="shortcut icon" href="/assets/img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
+  <link rel="stylesheet" href="assets/bulma.css">
 </head>
 <body> 
-  <nav><a href="/login"><img id="logo" src="/assets/img/icon.png" alt="calendar logo"/></a>
+  <!--nav><a href="/login"><img id="logo" src="/assets/img/icon.png" alt="calendar logo"/></a>
     <div class="navlink"><a id="loginButton" href="/login">Login</a></div>
     <div class="navlink"><a id="signupButton" href="/signup">Sign up</a></div>
+  </nav-->
+  <nav class="navbar" role="navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="/login"><img id="logo" src="/assets/img/icon.png" alt="calendar logo"/></a>
+    </div>
+    <div class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item" id="loginButton" href="/login">Login</a>
+        <a class="navbar-item" id="signupButton" href="/signup">Sign up</a>
+      </div>
+    </div>
   </nav>
   
   <section id="content">
