--- a/hosted/style.css
+++ b/hosted/style.css
@@ -7,18 +7,8 @@ html, body {
 }
 #logo {
     height: 60px;
-    /*width: 40px;*/
     padding-top: 5px;
     float:left;
-}
-nav {
-    width: 100%;
-    height: 70px;
-    background-color: #55acee;
-}
-
-nav:nth-child(1) {
-    padding-left: 25px;
 }
 
 .navlink {
@@ -43,7 +33,7 @@ nav:nth-child(1) {
     transition: background-color 0.8s ease;
     background-color: #66bdff;
 }
-
+/*
 .blocksetForm {
     border: 2px solid #338acc;
     height: 35px;
@@ -60,13 +50,12 @@ nav:nth-child(1) {
     width: 75px;
     margin-left: 10px;
     font-size: 1.2em;
-    /*float: left;*/
     color: white;
 }
 
 .blocksetForm input[type=text] {
-    /*float:left;*/
 }
+
 
 .makeBlocksetSubmit {
     transition: background-color 0.4s ease;
@@ -77,7 +66,9 @@ nav:nth-child(1) {
     color: white;
     text-decoration: none;
 }
+*/
 
+/*
 .makeBlocksetSubmit:link, .makeBlocksetSubmit:visited, .makeBlocksetSubmit:hover, .makeBlocksetSubmit:active {
     color: white;
 }
@@ -86,7 +77,7 @@ nav:nth-child(1) {
     transition: background-color 0.4s ease;
     background-color: #338acc;
 }
-
+*/
 .mainForm {
     height: 300px;
     width: 80%;
@@ -108,6 +99,7 @@ nav:nth-child(1) {
     font-size: 1.2em;
 }
 
+/*
 .formSubmit {
     transition: background-color 0.4s ease;
     display: block;
@@ -132,6 +124,7 @@ nav:nth-child(1) {
     transition: background-color 0.4s ease;
     background-color: #338acc;
 }
+*/
 
 #user, #pass, #pass2 {
     text-align: center;
@@ -193,12 +186,12 @@ nav:nth-child(1) {
 #blocksets {
     width: 80%;
     min-width: 700px;
-    border: 2px solid #55acee;
     border-radius: 4px;
     margin: 0 auto;
     margin-top: 100px;
 }
 
+/*
 .blockset {
     width: 95%;
     margin: 0 auto;
@@ -217,7 +210,9 @@ nav:nth-child(1) {
     transition: background-color 2.6s ease-out;
     background-color: #66bfff;
 }
+*/
 
+/*
 img.domoFace {
     margin-left: 25px;
     margin-right: 10px;
@@ -261,7 +256,8 @@ h3.blocksetWeight {
     padding-right: 40px;
     font-size: 1.5em;
 }
-
+*/
+/*
 .blockset:first-child {
     margin-top: 10px;
 }
@@ -269,19 +265,52 @@ h3.blocksetWeight {
 .blockset:last-child {
     margin-bottom:10px;
 }
+*/
 
+.deleteSubmit {
+    width: 90px;
+    margin-left: auto;
+    float: right;
+    display: inline;
+}
 
+.deleteBlockForm {
+    display: inline;
+}
 
+.blockname {
+    font-size: 1.4em;
+    font-weight: bold;
+    display: inline;
+}
 
+.block {
+    width: 95%;
+    height: 4em;
+}
+.block>* {
+    vertical-align: middle;
+    margin-top: auto;
+    margin-bottom: auto;
+}
 
+.blocklist {
+    background-color: #F2E7C7;
+    color: #5C2E23;
+}
 
+.blockset {
+    margin: 2rem;   
+    padding-top: 1rem;
+    padding-bottom: 1rem;
+    border: 2px solid #5C2E23;
+}
 
-
-
-
-
-.blocksetHeader {
-    background-color: #55acee;
+.blockset>* {
+    margin: auto;
+    padding-left: 1rem;
+    padding-right: 1rem;
+    width: 98%
 }
 
 .blocksetName h3 {
