--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -7,10 +7,22 @@
   <link rel="shortcut icon" href="/assets/img/favicon.png"/>
   <link rel="stylesheet" type="text/css" href="/assets/style.css"/>
   <link rel="stylesheet" type="text/css" href="/assets/profile.css"/>
+  <link rel="stylesheet" type="text/css" href="/assets/bulma.css"/>
 </head>
 <body>
-  <nav><a href="/login"><img id="logo" src="/assets/img/icon.png" alt="calendar logo"/></a>
-    <div class="navlink"><a href="/logout">Log out</a></div>
+  
+  <nav class="navbar has-background-primary" role="navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="/login"><img id="logo" src="/assets/img/icon.png" alt="calendar logo"/></a>
+    </div>
+    <div class="navbar-menu">
+      <div class="navbar-start">
+        <a class="navbar-item" href="/logout">Log out</a>
+        <a class="navbar-item" href="/login">Editor</a>
+        <a class="navbar-item" href="/profile">Profile</a>
+        <!--a class="navbar-item" href="/schedule">Schedule</a-->
+      </div>
+    </div>
   </nav>
   <section id="welcome"><h1>Welcome, {{name}}!</h1></section>
   <section id="friends">
@@ -33,7 +45,7 @@
     <h3><span id="errorMessage"></span></h3>
     <img id="blockset" src="assets/img/domo.png" alt="domo"/>
   </div>
-  
+
   <script src="/assets/profileBundle.js"></script>
 </body>
 </html>
