Other stuff and removing domo

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -43,7 +43,7 @@
   <div id="blocksetMessage" class='hidden'>
     <img id="speech" src="/assets/img/speech.png" alt="speech box"/>
     <h3><span id="errorMessage"></span></h3>
-    <img id="blockset" src="assets/img/domo.png" alt="domo"/>
+    <img id="blockset" src="/assets/img/icon.png" alt="cal"/>
   </div>
 
   <script src="/assets/profileBundle.js"></script>
