Made premium work

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -25,6 +25,12 @@
     </div>
   </nav>
   <section id="welcome"><h1>Welcome, {{name}}!</h1></section>
+  <div id="premium">
+      <h2>Go premium!</h2>
+      <div class="control">
+        <button class="button is-link" id="goPremium">"Pay"</button>
+      </div>
+  </div>
   <section id="friends">
     <section id="currentFriends">
       Current Friends
