Hid speech bubble

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -47,9 +47,9 @@
   </section>
 
   <div id="blocksetMessage" class='hidden'>
-    <img id="speech" src="/assets/img/speech.png" alt="speech box"/>
+    <!--img id="speech" src="/assets/img/speech.png" alt="speech box"/-->
     <h3><span id="errorMessage"></span></h3>
-    <img id="blockset" src="/assets/img/icon.png" alt="cal"/>
+    <!--img id="blockset" src="/assets/img/icon.png" alt="cal"/-->
   </div>
 
   <script src="/assets/profileBundle.js"></script>
