Added password changing

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -45,6 +45,9 @@
       Incoming Friend Requests
     </section>
   </section>
+  <section id="passwordSection">
+    
+  </section>
 
   <div id="blocksetMessage" class='hidden'>
     <!--img id="speech" src="/assets/img/speech.png" alt="speech box"/-->
